---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021-12-28
  Changes:
    - Version bump for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2021-12-28
  Bugfixes:
    - Avoid errors on unrecognized pipes
    - Avoid replacing fast-replace-able entities like other pipes
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020-09-07
  Features:
    - Prevent mixing fluids
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020-09-06
  Features:
    - Automatically place a pipe when two undergrounds are placed at a corner or one space apart
  Other:
    - First version!
