@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: ????
-  Changes:
+  Features:
+    - Replace ghost pipes
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 2021-12-28
